[workspace]
members = ["crush-sys", "libcrush"]

resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later OR LGPL-2.1-or-later"
repository = "https://github.com/sevki/libcrush"
homepage = "https://github.com/sevki/libcrush"
documentation = "https://docs.rs/libcrush"
readme = "README.md"
keywords = ["crush", "hashing", "distributed", "consistent-hashing", "ceph"]
categories = ["algorithms", "data-structures"]
description = "Rust implementation of the CRUSH (Controlled Replication Under Scalable Hashing) algorithm"

[package]
name = "mycrush"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.176"
num = { version = "0.4", features = ["std"] }
num-derive = "0.3"
num-traits = "0.2" # Explicitly add num-traits

[dev-dependencies]
crush-sys = { path = "crush-sys" }
googletest = "0.14.1"
