[workspace]
members = ["libcrush", "mycrush"]

resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later OR LGPL-2.1-or-later"
repository = "https://github.com/sevki/libcrush"
homepage = "https://github.com/sevki/libcrush"
readme = "README.md"
keywords = ["crush", "hashing", "distributed", "consistent-hashing", "ceph"]
categories = ["algorithms", "data-structures"]
description = "Rust implementation of the CRUSH (Controlled Replication Under Scalable Hashing) algorithm"

[package]
name = "crush-sys"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.25"

[dev-dependencies]
googletest = "0.14.1"
