[package]
name = "crush-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.68"
cc = "1.2.25"

[dev-dependencies]
googletest = "0.14.1"

[[test]]
name = "test_builder"
path = "tests/test_builder.rs"

[[test]]
name = "test_helpers"
path = "tests/test_helpers.rs"

[[test]]
name = "test_mapper"
path = "tests/test_mapper.rs"
