[package]
name = "libcrush"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
crush-sys = { version = "0.1.0", path = "../crush-sys" }
libc = "0.2.176"

[dev-dependencies]
googletest = "0.14.2"
