[package]
name = "mycrush"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.176"
num = { version = "0.4", features = ["std"] }
num-derive = "0.3"
num-traits = "0.2" # Explicitly add num-traits

[dev-dependencies]
crush-sys = { path = ".." }
googletest = "0.14.1"
