[package]
name = "mycrush"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2.176"
num = { version = "0.4", features = ["std"] }
num-derive = "0.3"
num-traits = "0.2" # Explicitly add num-traits

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
googletest = "0.14.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
