[package]
name = "mycrush"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2.176"
num = { version = "0.4", features = ["std"] }
num-derive = "0.3"
num-traits = "0.2" # Explicitly add num-traits
thiserror = "2.0.17"
wasm-bindgen = "0.2.104"
wasm-bindgen-test = "0.3.54"

[dev-dependencies]
googletest = "0.14.1"
